--- a/project/Makefile
+++ b/project/Makefile
@@ -3,19 +3,28 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: anvannin <anvannin@student.42.fr>          +#+  +:+       +#+         #
+#    By: kichkiro <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/30 14:51:06 by kichkiro          #+#    #+#              #
-#    Updated: 2023/06/26 20:05:29 by anvannin         ###   ########.fr        #
+#    Updated: 2023/07/01 11:25:58 by kichkiro         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 # Config ---------------------------------------------------------------------->
 
 NAME		:= minirt
-SRCS        :=	main.c\
-			window.c\
-			hooks.c
+SRCS        := \
+				main.c \
+				window.c \
+				hooks.c \
+				utils.c \
+				parser/parser.c \
+				parser/coords.c \
+				parser/rgb.c \
+				parser/shapes.c \
+				parser/_lst/t_scene_new.c \
+				parser/_lst/t_scene_add_back.c \
+				add_to_libft/ft_atof.c
 SRC_DIR     := src
 SRCS        := $(SRCS:%=$(SRC_DIR)/%)
 BUILD_DIR   := .build
