--- a/project/Makefile
+++ b/project/Makefile
@@ -6,7 +6,7 @@
 #    By: kichkiro <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/30 14:51:06 by kichkiro          #+#    #+#              #
-#    Updated: 2023/07/01 13:29:21 by kichkiro         ###   ########.fr        #
+#    Updated: 2023/07/01 17:33:23 by kichkiro         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,15 +18,13 @@ SRCS        := \
 				window.c \
 				hooks.c \
 				utils.c \
+				_lst/t_scene_add_back.c \
+				_lst/t_scene_new.c \
 				parser/parser.c \
 				parser/get_value.c \
-				parser/coords.c \
-				parser/rgb.c \
 				parser/display_obj.c \
 				parser/geometric_obj.c \
 				parser/lighting_obj.c \
-				parser/_lst/t_scene_new.c \
-				parser/_lst/t_scene_add_back.c \
 				add_to_libft/ft_atof.c
 SRC_DIR     := src
 SRCS        := $(SRCS:%=$(SRC_DIR)/%)
