render_sphere(cube) from center of screen

--- a/project/Makefile
+++ b/project/Makefile
@@ -6,7 +6,7 @@
 #    By: anvannin <anvannin@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/30 14:51:06 by kichkiro          #+#    #+#              #
-#    Updated: 2023/08/02 20:28:18 by anvannin         ###   ########.fr        #
+#    Updated: 2023/08/07 20:49:38 by anvannin         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -37,11 +37,13 @@ SRCS        := \
 				parser/geometric_obj.c \
 				parser/lighting_obj.c \
 				render/render.c \
+				render/sphere.c \
 				_lst/t_scene_add_back.c \
 				_lst/t_scene_new.c \
 				_lst/t_scene_set_to_head.c \
 				_lst/t_scene_free.c \
-				color/color.c
+				color/color.c \
+				logs/logs.c
 SRCS        := $(SRCS:%=$(SRC_DIR)/%)
 BUILD_DIR   := .build
 OBJS        := $(SRCS:$(SRC_DIR)/%.c=$(BUILD_DIR)/%.o)
