--- a/project/Makefile
+++ b/project/Makefile
@@ -6,7 +6,7 @@
 #    By: kichkiro <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/30 14:51:06 by kichkiro          #+#    #+#              #
-#    Updated: 2023/09/07 11:51:01 by kichkiro         ###   ########.fr        #
+#    Updated: 2023/09/08 14:03:54 by kichkiro         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -43,6 +43,7 @@ SRCS        := \
 				_lst/t_scene_set_to_head.c \
 				_lst/t_scene_free.c \
 				_lst/t_scene_find_obj_by_id.c \
+				_lst/t_scene_check_unique.c \
 				color/color.c \
 				logs/logs.c
 SRCS        := $(SRCS:%=$(SRC_DIR)/%)
