--- a/project/Makefile
+++ b/project/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: anvannin <anvannin@student.42.fr>          +#+  +:+       +#+         #
+#    By: kichkiro <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/30 14:51:06 by kichkiro          #+#    #+#              #
-#    Updated: 2023/10/24 18:34:05 by anvannin         ###   ########.fr        #
+#    Updated: 2023/10/24 21:45:28 by kichkiro         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
